--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome to My Flask App</title>
+    <title>Upload Audio/Video for Transcription</title>
 </head>
 <body>
-    <h1>Hello, welcome to my Flask app!</h1>
-    <p>This is a simple page served by Flask.</p>
+    <h1>Upload your file</h1>
+    <form action="/" method="post" enctype="multipart/form-data">
+        <input type="file" name="file">
+        <input type="submit" value="Transcribe">
+    </form>
 </body>
 </html>
