--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <h1>Upload your file</h1>
-    <form action="/" method="post" enctype="multipart/form-data" onsubmit="showSpinner()">
+    <form action="/process_file" method="post" enctype="multipart/form-data" onsubmit="showSpinner()">
         <input type="file" name="file" required>
 
         <!-- Dropdown for language selection -->
