--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Transcription App</title>
 </head>
 <body>
-    <h1>Upload an Audio File for Transcription</h1>
+    <h1>Upload an Audio - File for Transcription</h1>
     <form id="uploadForm" enctype="multipart/form-data">
         <input type="file" id="audioFile" accept="audio/*" required>
         <button type="submit">Upload</button>
